# android-op-testbed

./: README.md  gradle.properties  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/op_testbed/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv.cpp  transform.h
app/src/main/java/com/scz/lab/op_testbed/: MainActivity.kt  OnnxWrapper.kt  TensorBuilder.java
app/src/main/java/com/scz/lab/op_testbed/customview/: AutoFitTextureView.kt  OverlayView.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/op_testbed/: ExampleUnitTest.kt
cv-4.5.1/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
model/src/main/java/com/scz/lab/model/: Model.kt
onnxruntime-nnapi/: onnxruntime-release.aar
